--- a/app/templates/components/update-article.hbs
+++ b/app/templates/components/update-article.hbs
@@ -1,2 +1,7 @@
-
+<!-- {{#if showUpdate}}
+  <h3>form here</h3>
+{{else}}
+  <button {{action 'showUpdate'}}>Update</button>
+{{/if}} -->
+<p>JDJDJDJDJD</p>
 {{yield}}
